# omni-image

./: .gitignore  package.json
.github/workflows/: ci.yml
backend/: .env.example  lambda_function.py  pyproject.toml  template.yaml
backend/src/: app.py
backend/src/handlers/: chat.py  health.py
backend/src/models/: config.py  schemas.py
backend/src/services/: aws_client.py  bedrock_service.py  rate_limiter.py
backend/src/utils/: exceptions.py  logger.py
backend/tests/: conftest.py  test_aws_client.py  test_bedrock_service.py  test_config.py  test_exceptions.py  test_handlers.py  test_lambda_function.py  test_logger.py  test_rate_limiter.py  test_schemas.py
docs/plans/2026-04-05-omni-image-app/: Phase-0.md  Phase-1.md  Phase-2.md  README.md  brainstorm.md  feedback.md
frontend/: .env.example  .prettierignore  .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vitest.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.test.ts  api.ts  config.ts  types.ts
frontend/src/lib/components/: ChatInput.svelte  ChatInput.test.ts  ChatMessage.svelte  ChatMessage.test.ts  ExamplePrompts.svelte  ExamplePrompts.test.ts  SettingsPanel.svelte  SettingsPanel.test.ts
frontend/src/lib/stores/: chat.svelte.test.ts  chat.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte  page.test.ts
scripts/: deploy.js
